fixed z-index

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 100;
 
   width: 450px;
   min-height: 581px;
